--- a/package.json
+++ b/package.json
@@ -7,5 +7,34 @@
     "email": "info@openformation.io",
     "url": "https://openformation.io"
   },
-  "license": "See LICENSE"
+  "license": "See LICENSE",
+  "lint-staged": {
+    "./**/*.{ts,tsx,js,json,css,md}": [
+      "prettier --write"
+    ]
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "dependencies": {
+    "@logto/node": "^1.0.0-beta.8"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
+    "@tsconfig/recommended": "^1.0.1",
+    "@types/jest": "^29.1.2",
+    "@types/node": "^18.8.2",
+    "husky": "^8.0.1",
+    "jest": "^29.1.2",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.8.4"
+  },
+  "peerDependencies": {
+    "@remix-run/node": "^1.7.2"
+  }
 }
