feat: adds functionality for getting the authentication context

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "./scripts/bootstrap",
     "clean": "./scripts/clean",
     "compile": "./scripts/compile",
+    "compile:watch": "./scripts/compile:watch",
     "powerwash": "./scripts/powerwash"
   },
   "lint-staged": {
