--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "clean": "./scripts/clean",
     "compile": "./scripts/compile",
     "compile:watch": "./scripts/compile:watch",
-    "powerwash": "./scripts/powerwash"
+    "powerwash": "./scripts/powerwash",
+    "test": "./scripts/test"
   },
   "lint-staged": {
     "./**/*.{ts,tsx,js,json,css,md}": [
@@ -34,12 +35,13 @@
     "@commitlint/config-conventional": "^17.1.0",
     "@tsconfig/recommended": "^1.0.1",
     "@types/jest": "^29.1.2",
-    "@types/node": "^18.8.2",
+    "@types/node": "^18.8.3",
     "husky": "^8.0.1",
     "jest": "^29.1.2",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
-    "ts-jest": "^29.0.3",
+    "@swc/core": "^1.3.5",
+    "@swc/jest": "^0.2.23",
     "typescript": "^4.8.4"
   },
   "peerDependencies": {
