--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,9 @@
     "incremental": true,
 
     "removeComments": true,
+    "sourceMap": true,
     "alwaysStrict": true
   },
   "include": ["src"],
-  "exclude": ["**/.*/", "**/node_modules", "dist"]
+  "exclude": ["**/.*/", "**/node_modules", "dist", "example"]
 }
